--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </main>
 
     <footer class="footer">
-      <h6>Abhishek B U @ DevChallenges.io</h6>
+      <a href="https://devchallenges.io/portfolio/abhishekbu008" target="_blank">Abhishek B U @ Devchallenges.io</a>
     </footer>
 
     <script src="js/index.js"></script>
